<resources>
    <string name="app_name">Revolution</string>
    <string name="game_name">@string/app_name</string>

    <!-- solution custom dialog -->
    <string name="solution_text_view">Solution Navigator</string>
    <string name="solution_next">Next</string>
    <string name="solution_back">Back</string>
    <string name="button_positive">Yes</string>
    <string name="button_negative">No</string>

    <!--  toasts  -->
    <string name="undo_fail">There are no moves to undo.</string>
    <string name="invalid_anchor">Not a valid anchor.</string>
    <string name="success_part1">You have solved the puzzle in</string>
    <string name="success_part2_single">move!</string>
    <string name="success_part2_multiple">moves!</string>

    <!--  toolbar options menu items  -->
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_33">Do you want to start a new 3 x 3 Revolution game?</string>
    <string name="menu_34">Do you want to start a new 3 x 4 Revolution game?</string>
    <string name="menu_44">Do you want to start a new 4 x 4 Revolution game?</string>
    <string name="menu_3x3">3 x 3</string>
    <string name="menu_3x4">3 x 4</string>
    <string name="menu_4x4">4 x 4</string>
    <string name="menu_surrender">Surrender</string>
    <string name="menu_surrender_confirm">Do you want to surrender? You will lose the game.</string>
    <string name="already_surrendered">You have already surrendered.</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_achievement_confirm">Would you like to view your achievements?</string>
    <string name="menu_sound_disable">Disable Sound</string>
    <string name="menu_sound_enable">Enable Sound</string>
    <string name="game_is_over">You can\'t surrender, you already won.</string>

    <!--  content descriptions for ImageButtons and Buttons  -->
    <string name="undoButtonDescription">Undo the last move.</string>
    <string name="restartButtonDescription">Start a new game with the selected solution depth.</string>
    <string name="leftButtonDescription">Rotate the subgrid counter-clockwise.</string>
    <string name="rightButtonDescription">Rotate the subgrid clockwise.</string>

    <!--  text for the bottom row of buttons, as well as the TextView near the NumberPicker  -->
    <string name="leftButtonText">Left</string>
    <string name="undoButtonText">Undo</string>
    <string name="newGameButtonText">New Game</string>
    <string name="rightButtonText">Right</string>
    <string name="numberPickerText">Select the Solution Depth</string>

    <!-- text for achievement activity -->
    <string name="achievements">Achievements</string>
    <string name="board_size">Board Sizes Beaten</string>
    <string name="solution_depth">Solution Depths Beaten</string>
    <string name="checkmark">✔</string>
    <string name="cross">✘</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="reset">Reset</string>

    <!--  miscellaneous string resources  -->
    <string name="exit">Are you sure you want to exit?</string>
    <string name="starting">The game is in the starting configuration.</string>
    <string name="about">Revolution is a single-player puzzle played on a rectangular grid of numbered tiles. The player can rotate any 2x2 subgrid either clockwise (right) or counterclockwise (left). The goal is to sort the tiles into ascending order. Subgrids are specified by their top-left tile (the anchor position).</string>
</resources>